worked on gender part

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,12 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "576\n"
+     ]
+    }
+   ],
    "source": [
     "unique_players=purchase_data[\"SN\"].unique()\n",
-    "total_number_players=(len(unique_players))"
+    "total_number_players=(len(unique_players))\n",
+    "print(total_number_players)"
    ]
   },
   {
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -264,28 +273,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "179\n",
-      "3.04\n",
-      "2379.77\n"
+      "   Number of Items  Average Price  Total Revenue\n",
+      "0              179           3.04        2379.77\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "count    179.000000\n",
-       "mean       3.042849\n",
-       "std        1.168058\n",
-       "min        1.000000\n",
-       "25%        1.990000\n",
-       "50%        3.140000\n",
-       "75%        4.040000\n",
-       "max        4.990000\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -294,10 +284,10 @@
     "dup_id_dropped_df=purchase_data.drop_duplicates(subset=\"Item ID\", keep=\"last\")\n",
     "average_price=(dup_id_dropped_df[\"Price\"]).mean()\n",
     "total_rev=purchase_data[\"Price\"].sum()\n",
-    "print(num_un_items)\n",
-    "print(f'{average_price:.2f}')\n",
-    "print((f'{total_rev:.2f}'))\n",
-    "dup_id_dropped_df[\"Price\"].describe()"
+    "dup_id_dropped_df[\"Price\"].describe()\n",
+    "summary_dict=[{\"Number of Items\": num_un_items, \"Average Price\": average_price, \"Total Revenue\":total_rev}]\n",
+    "summary_df=pd.DataFrame(summary_dict)\n",
+    "print(summary_df.round(2))\n"
    ]
   },
   {
@@ -324,67 +314,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>484</td>\n",
-       "      <td>84.03%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>81</td>\n",
-       "      <td>14.06%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1.91%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Total Count Percentage of Players\n",
-       "Male                           484                84.03%\n",
-       "Female                          81                14.06%\n",
-       "Other / Non-Disclosed           11                 1.91%"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "#drop duplicates in SN\n",
+    "no_dupl_df=purchase_data.drop_duplicates(subset=[\"SN\"], keep='first')\n",
+    "female_count=(no_dupl_df['Gender'].tolist().count('Female'))\n",
+    "male_count=(no_dupl_df['Gender'].tolist().count('Male'))\n",
+    "other_count=total_number_players-(male_count+female_count)\n",
+    "\n",
+    "gender_dict=[{\"Male Count\": male_count,\"Percent Male\":(100*(male_count/total_number_players)),\n",
+    "              \"Female Count\": female_count,\"Percent Female\":(100*(female_count/total_number_players)),\n",
+    "              \"Other/Non-Discolsed Count\": other_count, \"Other/Non-Disclosed Percentage\":\n",
+    "              (100*(other_count/total_number_players))}]\n",
+    "gender_df=pd.DataFrame(gender_dict)\n",
+    "\n",
+    "#go through SN, if M add to male_count, if F add to female_count, else add to other_count\n",
+    "#divide each number by total_number_players and mult by 100 for percentage\n",
+    "#use locs"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,88 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "      <td>$3.20</td>\n",
-       "      <td>$361.94</td>\n",
-       "      <td>$4.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "      <td>$3.02</td>\n",
-       "      <td>$1,967.64</td>\n",
-       "      <td>$4.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$50.19</td>\n",
-       "      <td>$4.56</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
-       "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
