work on gender analysis

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +199,10 @@
     "import pandas as pd\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "file_to_load = \"Resources/purchase_data.csv\"\n",
+    "file = \"Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)\n",
+    "purchase_data = pd.read_csv(file)\n",
     "purchase_data"
    ]
   },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +234,7 @@
     }
    ],
    "source": [
+    "#find total number of players using unique so no duplicate SN\n",
     "unique_players=purchase_data[\"SN\"].unique()\n",
     "total_number_players=(len(unique_players))\n",
     "print(total_number_players)"
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -279,12 +280,16 @@
     }
    ],
    "source": [
+    "#drop duplicated by using unique() and use len() to get total number of unique items\n",
     "unique_items=purchase_data[\"Item ID\"].unique()\n",
     "num_un_items=(len(unique_items))\n",
+    "#create df with duplicate IDs dropped using .drop_duplicate\n",
     "dup_id_dropped_df=purchase_data.drop_duplicates(subset=\"Item ID\", keep=\"last\")\n",
+    "#calculate average price, total revenue\n",
     "average_price=(dup_id_dropped_df[\"Price\"]).mean()\n",
     "total_rev=purchase_data[\"Price\"].sum()\n",
     "dup_id_dropped_df[\"Price\"].describe()\n",
+    "#create a dict for summary table, make dict into df and print with rounding to 2 decimal places\n",
     "summary_dict=[{\"Number of Items\": num_un_items, \"Average Price\": average_price, \"Total Revenue\":total_rev}]\n",
     "summary_df=pd.DataFrame(summary_dict)\n",
     "print(summary_df.round(2))\n"
@@ -314,25 +319,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        Total Count Percentage of Players\n",
+      "0                 Male          484                84.03%\n",
+      "1               Female           81                14.06%\n",
+      "2  Other/Non-Disclosed           11                 1.91%\n"
+     ]
+    }
+   ],
    "source": [
     "#drop duplicates in SN\n",
     "no_dupl_df=purchase_data.drop_duplicates(subset=[\"SN\"], keep='first')\n",
+    "#count females from no_dupl and add to list \n",
     "female_count=(no_dupl_df['Gender'].tolist().count('Female'))\n",
+    "#count males from no_dupl and add to list\n",
     "male_count=(no_dupl_df['Gender'].tolist().count('Male'))\n",
+    "#add together male and female count and subtract from total players from unique to get other count\n",
     "other_count=total_number_players-(male_count+female_count)\n",
-    "\n",
-    "gender_dict=[{\"Male Count\": male_count,\"Percent Male\":(100*(male_count/total_number_players)),\n",
-    "              \"Female Count\": female_count,\"Percent Female\":(100*(female_count/total_number_players)),\n",
-    "              \"Other/Non-Discolsed Count\": other_count, \"Other/Non-Disclosed Percentage\":\n",
-    "              (100*(other_count/total_number_players))}]\n",
-    "gender_df=pd.DataFrame(gender_dict)\n",
-    "\n",
-    "#go through SN, if M add to male_count, if F add to female_count, else add to other_count\n",
-    "#divide each number by total_number_players and mult by 100 for percentage\n",
-    "#use locs"
+    "#create gender dict\n",
+    "gender_count={\"\":[\"Male\",\"Female\",\"Other/Non-Disclosed\"], \n",
+    "        \"Total Count\":[male_count,female_count,other_count], \n",
+    "        \"Percentage of Players\":[(100*(male_count/total_number_players)),(100*(female_count/total_number_players)),(100*(other_count/total_number_players))]}\n",
+    "#create gender df \n",
+    "gender_count_df=pd.DataFrame(gender_count,columns= [\"\", \"Total Count\", \"Percentage of Players\"])\n",
+    "#format percentage column\n",
+    "gender_count_df['Percentage of Players'] = gender_count_df['Percentage of Players'].apply('{:.2f}%'.format)\n",
+    "#print\n",
+    "print(gender_count_df)"
    ]
   },
   {
@@ -363,10 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# purchase count by gender\n",
+    "fpurchase_count=(purchase_data['Gender'].tolist().count('Female'))\n",
+    "mpurchase_count=(purchase_data['Gender'].tolist().count('Male'))\n",
+    "opurchase_count=len(purchase_data)-(fpurchase_count+mpurchase_count)\n",
+    "#avg purchase price: use groupby gender to find mean of \"price\" \n",
+    "avg_purchase_price=purchase_data.groupby(by='Gender')['Price'].mean()\n",
+    "#avg purchase total per person: create new df with duplicate SN with combined prices, goupby gender in new df\n",
+    "    #to find mean of average purchase total no_dupl_df=purchase_data.drop_duplicates(subset=[\"SN\"], keep='first')\n"
+   ]
   },
   {
    "cell_type": "markdown",
