--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -319,18 +319,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        Total Count Percentage of Players\n",
-      "0                 Male          484                84.03%\n",
-      "1               Female           81                14.06%\n",
-      "2  Other/Non-Disclosed           11                 1.91%\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Other/Non-Disclosed</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.91%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Total Count Percentage of Players\n",
+       "0                 Male          484                84.03%\n",
+       "1               Female           81                14.06%\n",
+       "2  Other/Non-Disclosed           11                 1.91%"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -351,8 +401,15 @@
     "#format percentage column\n",
     "gender_count_df['Percentage of Players'] = gender_count_df['Percentage of Players'].apply('{:.2f}%'.format)\n",
     "#print\n",
-    "print(gender_count_df)"
+    "gender_count_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -382,18 +439,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Average Purchase Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>652</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>3.017853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.203009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Other/Non-Disclosed</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>3.346000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Purchase Count  Average Purchase Price  \\\n",
+       "0                 Male             652                    3.02   \n",
+       "1               Female             113                    3.20   \n",
+       "2  Other/Non-Disclosed              15                    3.35   \n",
+       "\n",
+       "   Average Purchase Total  \n",
+       "0                3.017853  \n",
+       "1                3.203009  \n",
+       "2                3.346000  "
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# purchase count by gender\n",
     "fpurchase_count=(purchase_data['Gender'].tolist().count('Female'))\n",
     "mpurchase_count=(purchase_data['Gender'].tolist().count('Male'))\n",
     "opurchase_count=len(purchase_data)-(fpurchase_count+mpurchase_count)\n",
     "#avg purchase price: use groupby gender to find mean of \"price\" \n",
-    "avg_purchase_price=purchase_data.groupby(by='Gender')['Price'].mean()\n",
-    "#avg purchase total per person: create new df with duplicate SN with combined prices, goupby gender in new df\n",
-    "    #to find mean of average purchase total no_dupl_df=purchase_data.drop_duplicates(subset=[\"SN\"], keep='first')\n"
+    "avg_purchase_price=(purchase_data.groupby(by='Gender')['Price'].mean()).round(2)\n",
+    "#avg purchase total per person per gender\n",
+    "total_purchase=pd.DataFrame(purchase_data.groupby(by=\"Gender\")['Price'].sum())\n",
+    "favg_purchase =(((total_purchase.loc[\"Female\",\"Price\"])/fpurchase_count))\n",
+    "mavg_purchase=(((total_purchase.loc[\"Male\",\"Price\"])/mpurchase_count))           \n",
+    "oavg_purchase=((total_purchase.loc[\"Other / Non-Disclosed\",\"Price\"])/opurchase_count)\n",
+    "#summary table columns: purchase count, Average purchase price, average purchase total\n",
+    "summary_table = {\"\":[\"Male\",\"Female\",\"Other/Non-Disclosed\"],\n",
+    "               \"Purchase Count\":[mpurchase_count, fpurchase_count, opurchase_count], \n",
+    "                \"Average Purchase Price\":[avg_purchase_price.loc[\"Male\"], avg_purchase_price.loc[\"Female\"],avg_purchase_price.loc[\"Other / Non-Disclosed\"]],\n",
+    "                \"Average Purchase Total\": [mavg_purchase,favg_purchase, oavg_purchase]}\n",
+    "summary=pd.DataFrame(summary_table)\n",
+    "summary"
    ]
   },
   {
