worked on age demographics

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
     "purchase_data = pd.read_csv(file)\n",
-    "purchase_data"
+    "purchase_data\n"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -248,24 +248,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 164,
    "metadata": {
     "scrolled": true
    },
@@ -283,16 +267,36 @@
     "#drop duplicated by using unique() and use len() to get total number of unique items\n",
     "unique_items=purchase_data[\"Item ID\"].unique()\n",
     "num_un_items=(len(unique_items))\n",
+    "\n",
     "#create df with duplicate IDs dropped using .drop_duplicate\n",
     "dup_id_dropped_df=purchase_data.drop_duplicates(subset=\"Item ID\", keep=\"last\")\n",
+    "\n",
     "#calculate average price, total revenue\n",
     "average_price=(dup_id_dropped_df[\"Price\"]).mean()\n",
     "total_rev=purchase_data[\"Price\"].sum()\n",
     "dup_id_dropped_df[\"Price\"].describe()\n",
+    "\n",
     "#create a dict for summary table, make dict into df and print with rounding to 2 decimal places\n",
     "summary_dict=[{\"Number of Items\": num_un_items, \"Average Price\": average_price, \"Total Revenue\":total_rev}]\n",
     "summary_df=pd.DataFrame(summary_dict)\n",
-    "print(summary_df.round(2))\n"
+    "\n",
+    "print(summary_df.round(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
+    "\n",
+    "\n",
+    "* Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "* Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "* Display the summary data frame\n"
    ]
   },
   {
@@ -319,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +382,7 @@
        "2  Other/Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,20 +390,27 @@
    "source": [
     "#drop duplicates in SN\n",
     "no_dupl_df=purchase_data.drop_duplicates(subset=[\"SN\"], keep='first')\n",
+    "\n",
     "#count females from no_dupl and add to list \n",
     "female_count=(no_dupl_df['Gender'].tolist().count('Female'))\n",
+    "\n",
     "#count males from no_dupl and add to list\n",
     "male_count=(no_dupl_df['Gender'].tolist().count('Male'))\n",
+    "\n",
     "#add together male and female count and subtract from total players from unique to get other count\n",
     "other_count=total_number_players-(male_count+female_count)\n",
+    "\n",
     "#create gender dict\n",
     "gender_count={\"\":[\"Male\",\"Female\",\"Other/Non-Disclosed\"], \n",
     "        \"Total Count\":[male_count,female_count,other_count], \n",
     "        \"Percentage of Players\":[(100*(male_count/total_number_players)),(100*(female_count/total_number_players)),(100*(other_count/total_number_players))]}\n",
+    "\n",
     "#create gender df \n",
     "gender_count_df=pd.DataFrame(gender_count,columns= [\"\", \"Total Count\", \"Percentage of Players\"])\n",
+    "\n",
     "#format percentage column\n",
     "gender_count_df['Percentage of Players'] = gender_count_df['Percentage of Players'].apply('{:.2f}%'.format)\n",
+    "\n",
     "#print\n",
     "gender_count_df"
    ]
@@ -439,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -467,6 +478,7 @@
        "      <th>Purchase Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Average Purchase Total</th>\n",
+       "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -475,21 +487,24 @@
        "      <td>Male</td>\n",
        "      <td>652</td>\n",
        "      <td>3.02</td>\n",
-       "      <td>3.017853</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>1967.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Female</td>\n",
        "      <td>113</td>\n",
        "      <td>3.20</td>\n",
-       "      <td>3.203009</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>361.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Other/Non-Disclosed</td>\n",
        "      <td>15</td>\n",
        "      <td>3.35</td>\n",
-       "      <td>3.346000</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>50.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -501,13 +516,13 @@
        "1               Female             113                    3.20   \n",
        "2  Other/Non-Disclosed              15                    3.35   \n",
        "\n",
-       "   Average Purchase Total  \n",
-       "0                3.017853  \n",
-       "1                3.203009  \n",
-       "2                3.346000  "
+       "   Average Purchase Total  Total Purchase Value  \n",
+       "0                    4.07               1967.64  \n",
+       "1                    4.47                361.94  \n",
+       "2                    4.56                 50.19  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,20 +532,25 @@
     "fpurchase_count=(purchase_data['Gender'].tolist().count('Female'))\n",
     "mpurchase_count=(purchase_data['Gender'].tolist().count('Male'))\n",
     "opurchase_count=len(purchase_data)-(fpurchase_count+mpurchase_count)\n",
+    "\n",
     "#avg purchase price: use groupby gender to find mean of \"price\" \n",
     "avg_purchase_price=(purchase_data.groupby(by='Gender')['Price'].mean()).round(2)\n",
+    "\n",
     "#avg purchase total per person per gender\n",
     "total_purchase=pd.DataFrame(purchase_data.groupby(by=\"Gender\")['Price'].sum())\n",
-    "favg_purchase =(((total_purchase.loc[\"Female\",\"Price\"])/fpurchase_count))\n",
-    "mavg_purchase=(((total_purchase.loc[\"Male\",\"Price\"])/mpurchase_count))           \n",
-    "oavg_purchase=((total_purchase.loc[\"Other / Non-Disclosed\",\"Price\"])/opurchase_count)\n",
+    "favg_purchase =(((total_purchase.loc[\"Female\",\"Price\"])/female_count))\n",
+    "mavg_purchase=(((total_purchase.loc[\"Male\",\"Price\"])/male_count))           \n",
+    "oavg_purchase=((total_purchase.loc[\"Other / Non-Disclosed\",\"Price\"])/other_count)\n",
+    "\n",
     "#summary table columns: purchase count, Average purchase price, average purchase total\n",
     "summary_table = {\"\":[\"Male\",\"Female\",\"Other/Non-Disclosed\"],\n",
     "               \"Purchase Count\":[mpurchase_count, fpurchase_count, opurchase_count], \n",
     "                \"Average Purchase Price\":[avg_purchase_price.loc[\"Male\"], avg_purchase_price.loc[\"Female\"],avg_purchase_price.loc[\"Other / Non-Disclosed\"]],\n",
-    "                \"Average Purchase Total\": [mavg_purchase,favg_purchase, oavg_purchase]}\n",
+    "                \"Average Purchase Total\": [mavg_purchase,favg_purchase, oavg_purchase],\n",
+    "                \"Total Purchase Value\": [total_purchase.loc[\"Male\",\"Price\"], total_purchase.loc[\"Female\",\"Price\"], total_purchase.loc[\"Other / Non-Disclosed\",\"Price\"]]}\n",
     "summary=pd.DataFrame(summary_table)\n",
-    "summary"
+    "summary.round(2)\n",
+    "\n"
    ]
   },
   {
@@ -564,97 +584,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>17</td>\n",
-       "      <td>2.95%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>22</td>\n",
-       "      <td>3.82%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>107</td>\n",
-       "      <td>18.58%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>258</td>\n",
-       "      <td>44.79%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>77</td>\n",
-       "      <td>13.37%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>9.03%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>31</td>\n",
-       "      <td>5.38%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2.08%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Total Count Percentage of Players\n",
-       "<10             17                 2.95%\n",
-       "10-14           22                 3.82%\n",
-       "15-19          107                18.58%\n",
-       "20-24          258                44.79%\n",
-       "25-29           77                13.37%\n",
-       "30-34           52                 9.03%\n",
-       "35-39           31                 5.38%\n",
-       "40+             12                 2.08%"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-167-68cb558e412e>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-167-68cb558e412e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    #drop_dup_SN[\"Age Group\"]= pd.cut(drop_dup_SN[\"Age\"],bins, labels=group_names, include_lowest= True)\u001b[0m\n\u001b[0m                                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#create bins for ages min=7, max =45, avg=30\n",
+    "bins =[0,10,15,20,25,30,35,40,45]\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
+    "#drop duplicate SN \n",
+    "drop_dup_SN=pd.DataFrame(purchase_data.drop_duplicates(subset=\"SN\", keep=\"last\")                      \n",
+    "#drop_dup_SN[\"Age Group\"]= pd.cut(drop_dup_SN[\"Age\"],bins, labels=group_names, include_lowest= True)\n"
+   ]
   },
   {
    "cell_type": "markdown",
