completed purchasing analysis (age)

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -298,7 +298,7 @@
        "0                     179           3.04                 780        2379.77"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "Other/Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,13 +461,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -495,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -537,21 +530,21 @@
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>3.02</td>\n",
-       "      <td>4.065372</td>\n",
+       "      <td>4.07</td>\n",
        "      <td>1967.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
        "      <td>3.20</td>\n",
-       "      <td>4.468395</td>\n",
+       "      <td>4.47</td>\n",
        "      <td>361.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other/Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>3.35</td>\n",
-       "      <td>4.562727</td>\n",
+       "      <td>4.56</td>\n",
        "      <td>50.19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -567,12 +560,12 @@
        "\n",
        "                     Average Purchase Total  Total Purchase Value  \n",
        "Gender                                                             \n",
-       "Male                               4.065372               1967.64  \n",
-       "Female                             4.468395                361.94  \n",
-       "Other/Non-Disclosed                4.562727                 50.19  "
+       "Male                                   4.07               1967.64  \n",
+       "Female                                 4.47                361.94  \n",
+       "Other/Non-Disclosed                    4.56                 50.19  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +594,7 @@
     "summary=pd.DataFrame(summary_table)\n",
     "summary.round(2)\n",
     "summary_index=summary.set_index([\"Gender\"])\n",
-    "summary_index\n"
+    "summary_index.round(2)\n"
    ]
   },
   {
@@ -635,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +713,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,9 +779,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$77.13</td>\n",
+       "      <td>$4.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>$2.96</td>\n",
+       "      <td>$82.78</td>\n",
+       "      <td>$3.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>$3.04</td>\n",
+       "      <td>$412.89</td>\n",
+       "      <td>$3.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>$1114.06</td>\n",
+       "      <td>$4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>$2.90</td>\n",
+       "      <td>$293.00</td>\n",
+       "      <td>$3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>$2.93</td>\n",
+       "      <td>$214.00</td>\n",
+       "      <td>$4.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>$3.60</td>\n",
+       "      <td>$147.67</td>\n",
+       "      <td>$4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$2.94</td>\n",
+       "      <td>$38.24</td>\n",
+       "      <td>$3.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "Age Ranges                                                               \n",
+       "<10                     23                  $3.35               $77.13   \n",
+       "10-14                   28                  $2.96               $82.78   \n",
+       "15-19                  136                  $3.04              $412.89   \n",
+       "20-24                  365                  $3.05             $1114.06   \n",
+       "25-29                  101                  $2.90              $293.00   \n",
+       "30-34                   73                  $2.93              $214.00   \n",
+       "35-39                   41                  $3.60              $147.67   \n",
+       "40+                     13                  $2.94               $38.24   \n",
+       "\n",
+       "           Avg Total Purchase per Person  \n",
+       "Age Ranges                                \n",
+       "<10                                $4.54  \n",
+       "10-14                              $3.76  \n",
+       "15-19                              $3.86  \n",
+       "20-24                              $4.32  \n",
+       "25-29                              $3.81  \n",
+       "30-34                              $4.12  \n",
+       "35-39                              $4.76  \n",
+       "40+                                $3.19  "
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bins =[7,9.9,14.9,19.9,24.9,29.9,34.9,39.9,50]\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
@@ -800,11 +917,23 @@
     "#Total Purchase Value per age group\n",
     "age_purchase_total= purchase_data.groupby(by=\"Age Ranges\")[\"Price\"].sum()\n",
     "#Avg Total Purchase per age group\n",
-    "#avg_purchase_total=age_purchase_total/age_purchase_count\n",
+    "avg_purchase_total=age_purchase_total/(no_dupl_sn.groupby(by=\"Age Ranges\")[\"SN\"].count())\n",
     "\n",
-    "#age_purchase_count\n",
-    "#age_purchase_avg\n",
-    "#age_purchase_total\n"
+    "age_purchase_count.apply\n",
+    "age_purchase_avg\n",
+    "age_purchase_total\n",
+    "avg_purchase_total\n",
+    "#Age Summary Table\n",
+    "\n",
+    "age_summary_dict= {'Purchase Count': age_purchase_count, 'Average Purchase Price': age_purchase_avg,\n",
+    "   'Total Purchase Value':age_purchase_total,\n",
+    "   'Avg Total Purchase per Person': avg_purchase_total}\n",
+    "age_summary_table=pd.DataFrame(age_summary_dict)\n",
+    "age_summary_table[\"Average Purchase Price\"]=age_summary_table[\"Average Purchase Price\"].map('${:.2f}'.format)\n",
+    "age_summary_table[\"Total Purchase Value\"]=age_summary_table[\"Total Purchase Value\"].map('${:.2f}'.format)\n",
+    "age_summary_table[\"Avg Total Purchase per Person\"]=age_summary_table[\"Avg Total Purchase per Person\"].map('${:.2f}'.format)\n",
+    "\n",
+    "age_summary_table\n"
    ]
   },
   {
